--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: #f7f1e3 url('https://i.imgur.com/XgL6CZZ.png') repeat;
+  background: #f7f1e3 repeat;
   text-align: center;
   margin: 0;
   padding: 20px;
